[gd_scene load_steps=14 format=3 uid="uid://ujrsirrkpn5r"]

[ext_resource type="Texture2D" uid="uid://dea4htl4ter1" path="res://background/background.jpg" id="1_16ouh"]
[ext_resource type="Script" path="res://scripts/manu.gd" id="1_w0fmo"]
[ext_resource type="FontFile" uid="uid://dmcupxn2vy5sx" path="res://background/Jaro-Regular-VariableFont_opsz.ttf" id="2_ybg5i"]
[ext_resource type="StyleBox" uid="uid://cnkd4fdmriu21" path="res://background/new_style_box_flat.tres" id="3_bgfhf"]
[ext_resource type="StyleBox" uid="uid://dt483lgrpdu4m" path="res://background/press.tres" id="4_tgq6v"]
[ext_resource type="StyleBox" uid="uid://bawc0ben8uv6d" path="res://background/tips.tres" id="5_475ep"]
[ext_resource type="StyleBox" uid="uid://bwm1wioil6arx" path="res://background/tips_p.tres" id="6_6hbrt"]
[ext_resource type="StyleBox" uid="uid://b07y6p24p8tn5" path="res://background/manu_press'.tres" id="7_fmlug"]
[ext_resource type="Texture2D" uid="uid://cwhgest3ym4my" path="res://background/black_texture.jpeg" id="8_8ilsq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xopc6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_right = 5
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7n2rn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_right = 5
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhwad"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 7
border_width_top = 2
border_width_right = 7
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37ib8"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 7
border_width_top = 2
border_width_right = 7
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100

[node name="manu" type="Node2D"]
script = ExtResource("1_w0fmo")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576.5, 323.25)
scale = Vector2(2.04078, 1.80812)
texture = ExtResource("1_16ouh")

[node name="BlackTexture" type="Sprite2D" parent="."]
position = Vector2(576.5, 327)
scale = Vector2(5.15625, 2.89286)
texture = ExtResource("8_8ilsq")

[node name="Game_name" type="Label" parent="."]
offset_left = 227.0
offset_top = 20.0
offset_right = 943.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ybg5i")
theme_override_font_sizes/font_size = 100
text = "A Tale of A Knight"

[node name="tips_tittle" type="Label" parent="."]
offset_left = 2.0
offset_right = 1168.0
offset_bottom = 94.0
theme_override_fonts/font = ExtResource("2_ybg5i")
theme_override_font_sizes/font_size = 75
text = "How to play ?"
horizontal_alignment = 1

[node name="Start" type="Button" parent="."]
offset_left = 364.0
offset_top = 285.0
offset_right = 769.0
offset_bottom = 371.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ybg5i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("3_bgfhf")
theme_override_styles/hover = ExtResource("3_bgfhf")
theme_override_styles/pressed = ExtResource("4_tgq6v")
theme_override_styles/focus = ExtResource("4_tgq6v")
text = "Start Game
"

[node name="Tips" type="Button" parent="."]
offset_left = 1086.0
offset_top = 581.0
offset_right = 1151.0
offset_bottom = 646.0
theme_override_fonts/font = ExtResource("2_ybg5i")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("7_fmlug")
theme_override_styles/hover = ExtResource("5_475ep")
theme_override_styles/pressed = ExtResource("6_6hbrt")
theme_override_styles/focus = ExtResource("6_6hbrt")
text = "!
"

[node name="Start2" type="Button" parent="."]
offset_left = 362.0
offset_top = 399.0
offset_right = 758.0
offset_bottom = 485.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ybg5i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("3_bgfhf")
theme_override_styles/hover = ExtResource("3_bgfhf")
theme_override_styles/pressed = ExtResource("4_tgq6v")
theme_override_styles/focus = ExtResource("4_tgq6v")
text = "Exit Game"

[node name="move" type="Label" parent="."]
offset_left = 59.0
offset_top = 134.0
offset_right = 239.0
offset_bottom = 299.0
theme_override_fonts/font = ExtResource("2_ybg5i")
theme_override_font_sizes/font_size = 20
text = "Control your character 
 ↑ = move up
 ↓ = move down
 ← = move left 
 → = move right
e = attack
"
horizontal_alignment = 1

[node name="move2" type="Label" parent="."]
offset_left = 353.0
offset_top = 137.0
offset_right = 533.0
offset_bottom = 302.0
theme_override_fonts/font = ExtResource("2_ybg5i")
theme_override_font_sizes/font_size = 20
text = "setting
pause game = Esc
resume game = Esc"
horizontal_alignment = 1

[node name="move3" type="Label" parent="."]
offset_left = 13.0
offset_top = 360.0
offset_right = 1040.0
offset_bottom = 525.0
theme_override_fonts/font = ExtResource("2_ybg5i")
theme_override_font_sizes/font_size = 20
text = "Move the character and defeat the moster ! Clear it and go to next level to find the princess. The princess in a huge castle, but it's 
possible  there have something inside the castle  ...... Go! Bring the princess go back home ....
The princess will  fall in love with you......
Maybe la ......"

[node name="back" type="Button" parent="."]
offset_left = 410.0
offset_top = 610.0
offset_right = 714.0
offset_bottom = 652.0
theme_override_fonts/font = ExtResource("2_ybg5i")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_xopc6")
theme_override_styles/hover = SubResource("StyleBoxFlat_7n2rn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xhwad")
theme_override_styles/focus = SubResource("StyleBoxFlat_37ib8")
text = "I know already !"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Tips" to="." method="_on_tips_pressed"]
[connection signal="pressed" from="Start2" to="." method="_on_start_2_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
